--- a/fake_news_prediction/fake_news_prediction.ipynb
+++ b/fake_news_prediction/fake_news_prediction.ipynb
@@ -28,8 +28,8 @@
         "- Files: True.csv.zip, Fake.csv.zip\n",
         "- Columns: title, text, subject, label\n",
         "- Labels:\n",
-        "  - 1 → Real\n",
-        "  - 0 → Fake"
+        "  - 1 \u2192 Real\n",
+        "  - 0 \u2192 Fake"
       ]
     },
     {
@@ -59,10 +59,10 @@
         "# re (regular expression) library is useful for searching, replacing, or cleaning specific patterns in text.\n",
         "\n",
         "from nltk.corpus import stopwords\n",
-        "# stopwords are common words (like a, the, is) that are usually removed from text data because they don’t add much meaning.\n",
+        "# stopwords are common words (like a, the, is) that are usually removed from text data because they don\u2019t add much meaning.\n",
         "\n",
         "from nltk.stem.porter import PorterStemmer\n",
-        "# PorterStemmer helps reduce words to their base or root form. e.g., “playing”, “played” → “play”.\n",
+        "# PorterStemmer helps reduce words to their base or root form. e.g., \u201cplaying\u201d, \u201cplayed\u201d \u2192 \u201cplay\u201d.\n",
         "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "# Converts text data into numerical format by calculating importance of words (TF-IDF technique).\n",
@@ -215,7 +215,7 @@
         "\n",
         "# Shuffle the rows so that real and fake articles are mixed randomly\n",
         "# This helps prevent any order bias during model training\n",
-        "# frac=1 means we’re returning 100% of the data, just shuffled\n",
+        "# frac=1 means we\u2019re returning 100% of the data, just shuffled\n",
         "# random_state=42 ensures reproducibility (same shuffle every time)\n",
         "news_data = news_data.sample(frac=1, random_state=42).reset_index(drop=True)"
       ]
@@ -286,7 +286,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Mike Pence’s New DC Neighbors Are HILARIOUSLY...</td>\n",
+              "      <td>Mike Pence\u2019s New DC Neighbors Are HILARIOUSLY...</td>\n",
               "      <td>Mike Pence is a huge homophobe. He supports ex...</td>\n",
               "      <td>News</td>\n",
               "      <td>December 3, 2016</td>\n",
@@ -525,7 +525,7 @@
               "                                               title  \\\n",
               "0   BREAKING: GOP Chairman Grassley Has Had Enoug...   \n",
               "1   Failed GOP Candidates Remembered In Hilarious...   \n",
-              "2   Mike Pence’s New DC Neighbors Are HILARIOUSLY...   \n",
+              "2   Mike Pence\u2019s New DC Neighbors Are HILARIOUSLY...   \n",
               "3  California AG pledges to defend birth control ...   \n",
               "4  AZ RANCHERS Living On US-Mexico Border Destroy...   \n",
               "\n",
@@ -770,12 +770,12 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Mike Pence’s New DC Neighbors Are HILARIOUSLY...</td>\n",
+              "      <td>Mike Pence\u2019s New DC Neighbors Are HILARIOUSLY...</td>\n",
               "      <td>Mike Pence is a huge homophobe. He supports ex...</td>\n",
               "      <td>News</td>\n",
               "      <td>December 3, 2016</td>\n",
               "      <td>0</td>\n",
-              "      <td>Mike Pence’s New DC Neighbors Are HILARIOUSLY...</td>\n",
+              "      <td>Mike Pence\u2019s New DC Neighbors Are HILARIOUSLY...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1012,7 +1012,7 @@
               "                                               title  \\\n",
               "0   BREAKING: GOP Chairman Grassley Has Had Enoug...   \n",
               "1   Failed GOP Candidates Remembered In Hilarious...   \n",
-              "2   Mike Pence’s New DC Neighbors Are HILARIOUSLY...   \n",
+              "2   Mike Pence\u2019s New DC Neighbors Are HILARIOUSLY...   \n",
               "3  California AG pledges to defend birth control ...   \n",
               "4  AZ RANCHERS Living On US-Mexico Border Destroy...   \n",
               "\n",
@@ -1026,7 +1026,7 @@
               "               date  label                                            content  \n",
               "0     July 21, 2017      0   BREAKING: GOP Chairman Grassley Has Had Enoug...  \n",
               "1       May 7, 2016      0   Failed GOP Candidates Remembered In Hilarious...  \n",
-              "2  December 3, 2016      0   Mike Pence’s New DC Neighbors Are HILARIOUSLY...  \n",
+              "2  December 3, 2016      0   Mike Pence\u2019s New DC Neighbors Are HILARIOUSLY...  \n",
               "3  October 6, 2017       1  California AG pledges to defend birth control ...  \n",
               "4      Apr 25, 2017      0  AZ RANCHERS Living On US-Mexico Border Destroy...  "
             ]
@@ -1231,7 +1231,7 @@
         "id": "_-kOVR9Ojc2J"
       },
       "source": [
-        "- `tqdm` is a Python library that shows a progress bar for loops — useful for long operations like text preprocessing.\n",
+        "- `tqdm` is a Python library that shows a progress bar for loops \u2014 useful for long operations like text preprocessing.\n",
         "\n",
         "- `tqdm.notebook` version is specifically designed for Jupyter/Colab notebooks with nice formatting.\n",
         "\n",
@@ -1753,7 +1753,7 @@
               "\n",
               "#sk-container-id-3 label.sk-toggleable__label-arrow:before {\n",
               "  /* Arrow on the left of the label */\n",
-              "  content: \"▸\";\n",
+              "  content: \"\u25b8\";\n",
               "  float: left;\n",
               "  margin-right: 0.25em;\n",
               "  color: var(--sklearn-color-icon);\n",
@@ -1800,7 +1800,7 @@
               "}\n",
               "\n",
               "#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
-              "  content: \"▾\";\n",
+              "  content: \"\u25be\";\n",
               "}\n",
               "\n",
               "/* Pipeline/ColumnTransformer-specific style */\n",
@@ -2180,352 +2180,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "0910cb45b2ac4b328c8b371428fb8081": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "DescriptionStyleModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "0f95d5ad82f649c7b267ef92f9de9c4a": {
-          "model_module": "@jupyter-widgets/base",
-          "model_module_version": "1.2.0",
-          "model_name": "LayoutModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "2d70bd2a73a44aa49438c4c016f07d18": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "HBoxModel",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_7bf3ff30bedd4c759743b20a2faad035",
-              "IPY_MODEL_607dd1bee0b64d95ac0b1a818006b129",
-              "IPY_MODEL_939033439a40427988f9dac06992cb52"
-            ],
-            "layout": "IPY_MODEL_810e562d7c5b4c9498f3ecb6e00a32f3"
-          }
-        },
-        "2f1ecb37d9514bc5bc39a829b3817980": {
-          "model_module": "@jupyter-widgets/base",
-          "model_module_version": "1.2.0",
-          "model_name": "LayoutModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "607dd1bee0b64d95ac0b1a818006b129": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "FloatProgressModel",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FloatProgressModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "ProgressView",
-            "bar_style": "success",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_2f1ecb37d9514bc5bc39a829b3817980",
-            "max": 44898,
-            "min": 0,
-            "orientation": "horizontal",
-            "style": "IPY_MODEL_e581301d5a4f4355a27dcb532c87dcad",
-            "value": 44898
-          }
-        },
-        "77cfc2788dd0400f94505d72d7f0e7d4": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "DescriptionStyleModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "7bf3ff30bedd4c759743b20a2faad035": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "HTMLModel",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_0f95d5ad82f649c7b267ef92f9de9c4a",
-            "placeholder": "​",
-            "style": "IPY_MODEL_0910cb45b2ac4b328c8b371428fb8081",
-            "value": "100%"
-          }
-        },
-        "810e562d7c5b4c9498f3ecb6e00a32f3": {
-          "model_module": "@jupyter-widgets/base",
-          "model_module_version": "1.2.0",
-          "model_name": "LayoutModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "939033439a40427988f9dac06992cb52": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "HTMLModel",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_aa023c5dcf21453dadf235e5aa1ec47f",
-            "placeholder": "​",
-            "style": "IPY_MODEL_77cfc2788dd0400f94505d72d7f0e7d4",
-            "value": " 44898/44898 [03:55&lt;00:00, 211.40it/s]"
-          }
-        },
-        "aa023c5dcf21453dadf235e5aa1ec47f": {
-          "model_module": "@jupyter-widgets/base",
-          "model_module_version": "1.2.0",
-          "model_name": "LayoutModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "e581301d5a4f4355a27dcb532c87dcad": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_module_version": "1.5.0",
-          "model_name": "ProgressStyleModel",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "nbformat": 4,
